2001-11-21  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (install-exec-hook): Prepend $(DESTDIR) to filename.
	Thanks to Eric Gillespie, Jr!
	
2001-11-21  Stefan Jahn  <stefan@lkcc.org>

	* win32-socket.c (getservent, setservent, endservent, 
	getprotoent, setprotoent, endprotoent): New functions.  
	Appropriate replacements for M$-Windows.

	* numbers.c (SIZE_MAX, PTRDIFF_MAX, PTRDIFF_MIN): Reintroduced
	these definitions for GUILE_DEBUG.

	* net_db.c: Include "win32-socket.h" if compiling with a native
	M$-Windows compiler.  Include some pieces of code (protoent and 
	servent interface) protected by HAVE_* macros when using a 
	native M$-Windows compiler.

2001-11-20  Marius Vollmer  <mvo@zagadka.ping.de>

	* modules.c (scm_c_export): Do nothing when the first argument is
	already the terminating NULL.  Thanks to Han-Wen Nienhuys!

2001-11-20  Thien-Thi Nguyen  <ttn@glug.org>

	* Makefile.am (libpath.h): In SCM_BUILD_INFO,
	also include `buildstamp'.

2001-11-18  Rob Browning  <rlb@defaultvalue.org>

	* version.c
	(s_scm_major_version): use SCM_MAJOR_VERSION.
	(s_scm_minor_version): use SCM_MINOR_VERSION.
	(s_scm_micro_version): use SCM_MICRO_VERSION.
	(s_scm_version): use SCM_MAJOR_VERSION, SCM_MINOR_VERSION, and
	SCM_MICRO_VERSION.

	* version.h.in
	(SCM_MAJOR_VERSION): renamed from SCM_GUILE_MAJOR_VERSION.
	(SCM_MINOR_VERSION): renamed from SCM_GUILE_MINOR_VERSION.
	(SCM_MICRO_VERSION): renamed from SCM_GUILE_MICRO_VERSION.

2001-11-18  Neil Jerram  <neil@ossau.uklinux.net>

	* vectors.c (scm_vector_move_left_x, scm_vector_move_right_x):
	Rewrite docstrings without reference to substring-move-left/right,
	since the latter no longer exist.

2001-11-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c:  Removed bogus comment about acros.

	(scm_unmemocar):  Use !SCM_CONSP instead of SCM_IMP.
	Minimize scope of local variable.  Eliminate dependency on
	macro DEBUG_EXTENSIONS.

	(s_splicing):  New error message string.
