@@ -23,3 +23,4 @@ For fixes or providing information which led to a fix:
             Ken Raeburn
 	   Bill Schottstaedt
         Momchil Velikov
+          Keith Wright
